--- a/views/tweets/new.hbs
+++ b/views/tweets/new.hbs
@@ -1,14 +1,59 @@
+<h1>New Tweet</h1>
+
+{{#if errors}}
+  <div class="alert alert-danger">
+      review from data
+  </div>
+{{/if}}
 
 
 <form action="/tweets" method="POST">
   <div class="mb-3">
     <label for="user" class="form-label">user</label>
-    <input name="user" type="text" class="form-control" id="user">
+    <input value="{{ tweet.user }}" name="user" type="text" class="form-control {{#if errors.user}}is-invalid{{/if}}" id="user">
   </div>
   <div class="mb-3">
     <label for="message" class="form-label">message</label>
-    <textarea name="message" class="form-control" id="message" rows="5">
+    <textarea name="message" class="form-control {{#if errors.message }}is-invalid{{/if}}" id="message" rows="5">
+      {{ tweet.message }}
     </textarea>
   </div>
   <button type="submit" class="btn btn-primary">Create</button>
 </form>
+
+{{!-- <h1>New Tweet</h1>
+
+{{#if errors}}
+  <div class="alert alert-danger">
+    review form data
+  </div>
+{{/if}}
+
+<form action="/tweets" method="POST">
+  <div class="mb-3">
+    <label for="user" class="form-label">user</label>
+    <input type="email" value="{{tweet.user}}" name="user" type="text" class="form-control {{#if errors.user}}is-invalid{{/if}}" id="user">
+    {{#if errors.user}}
+      <div class="invalid-feedback">
+        {{errors.user.message}}
+      </div>
+    {{/if}}
+  </div>
+
+  <div class="mb-3">
+    <label for="image" class="form-label">image</label>
+    <input value="{{tweet.image}}" name="image" type="text" class="form-control {{#if errors.image}}is-invalid{{/if}}" id="image">
+  </div>
+
+  <div class="mb-3">
+    <label for="message" class="form-label">message</label>
+    <textarea name="message" class="form-control {{#if errors.message}}is-invalid{{/if}}" id="message" rows="5">{{tweet.message}}</textarea>
+    {{#if errors.message}}
+      <div class="invalid-feedback">
+        {{errors.message.message}}
+      </div>
+    {{/if}}
+  </div>
+  
+  <button type="submit" class="btn btn-primary">Create</button>
+</form> --}}
