--- a/views/tweets/list.hbs
+++ b/views/tweets/list.hbs
@@ -1,6 +1,6 @@
 <h1>List of Tweets</h1>
 
-<ul>
+{{!-- <ul>
   {{#each tweets as | tweet | }}
   <li>Tweets de: {{ tweet.user }}</a></li>
   <li>{{ tweet.message }}</li>
@@ -13,7 +13,21 @@
     <a href="/tweets/{{tweet.id}}">Detail</a>
     <p></p>
   {{/each}}
-</ul>
+</ul> --}}
+{{#each tweets as | tweet | }}
+<div class="card border-dark mb-3" style="max-width: 18rem;">
+  <div class="card-header bg-transparent border-0">
+    @{{ tweet.user }} · {{#if tweet.updatedAt}} 
+    {{ date tweet.updatedAt }}
+      {{ else }} 
+    {{ date tweet.createdAt }}</li>
+    {{/if}}</div>
+  <div class="card-body">
+    <p class="card-text">{{ tweet.message }}</p>
+  </div>
+  <div class="card-footer bg-transparent border-0">{{ tweet.likes }}</div>
+</div>
+ {{/each}}
 
 
 
