--- a/views/tweets/new.hbs
+++ b/views/tweets/new.hbs
@@ -1,4 +1,5 @@
 
+
 <h1>New Tweet</h1>
 
 {{#if errors}}
@@ -10,7 +11,7 @@
 <form action="/tweets" method="POST">
   <div class="mb-3">
     <label for="user" class="form-label">user</label>
-    <input type="user" value="{{tweet.user}}" name="user" type="text" class="form-control {{#if errors.user}}is-invalid{{/if}}" id="user">
+    <input type="user" value="{{tweet.user}}" name="user" class="form-control {{#if errors.user}}is-invalid{{/if}}" id="user">
     {{#if errors.user}}
       <div class="invalid-feedback">
         {{errors.user.message}}
