--- a/views/commons/home.hbs
+++ b/views/commons/home.hbs
@@ -3,6 +3,11 @@
 
 <a href="/tweets">Ve a ver la lista de tweets</a>
 
+<div></div>
+<a href="/user/new" class="btn btn-primary">New User</a>
+<a href="/login" class="btn btn-primary">Log In</a>
+</div>
+
 
 
 
