--- a/views/commons/home.hbs
+++ b/views/commons/home.hbs
@@ -1,12 +1,5 @@
-<h1>hola estas en la home</h1>
+<h1>Twitter</h1>
 
-
-<a href="/tweets">Ve a ver la lista de tweets</a>
-
-<div></div>
-<a href="/user/new" class="btn btn-primary">New User</a>
-<a href="/login" class="btn btn-primary">Log In</a>
-</div>
 
 
 
