--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
+    {{>navbar }}
+
     {{{body}}}
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
