--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,4 +1,4 @@
-<h1>Create a new user</h1>
+<h1 class="text-center">New User</h1>
 
 
 {{#if errors}}
@@ -6,36 +6,35 @@
     review form data
   </div>
 {{/if}}
-
-<form action="/login" method="POST">
-  <div class="mb-3">
-    <label for="name" class="form-label">name</label>
-    <input type="text" value="{{user.name}}" name="name" class="form-control {{#if errors.name}} is-invalid{{/if}}" id="name">
-    {{#if errors.name}}
-      <div class="invalid-feedback">
-        {{errors.name.message}}
-      </div>
-    {{/if}}
-  </div>
-
-  <div class="mb-3">
-    <label for="email" class="form-label">email</label>
-    <input type="email" value="{{user.email}}" name="email" class="form-control {{#if errors.email}} is-invalid{{/if}}" id="email">
-    {{#if errors.email}}
-      <div class="invalid-feedback">
-        {{errors.email.message}}
-      </div>
-    {{/if}}
-  </div>
-
-   <div class="mb-3">
-    <label for="password" class="form-label">password</label>
-    <input type="password" value="{{user.password}}" name="password" class="form-control {{#if errors.password}} is-invalid{{/if}}" id="password">
-    {{#if errors.password}}
-      <div class="invalid-feedback">
-        {{errors.password.message}}
-      </div>
-    {{/if}}
-  </div>
-  <button type="submit" class="btn btn-primary">Create</button>
-</form>
+<div class="d-flex align-items-center flex-column mb-3">
+  <form action="/login" method="POST"  style="width: 28rem;">
+    <div class="mb-3">
+      <label for="name" class="form-label">Name</label>
+      <input type="text" value="{{user.name}}" name="name" class="form-control {{#if errors.name}} is-invalid{{/if}}" id="name">
+      {{#if errors.name}}
+        <div class="invalid-feedback">
+          {{errors.name.message}}
+        </div>
+      {{/if}}
+    </div>
+    <div class="mb-3">
+      <label for="email" class="form-label">Email</label>
+      <input type="email" value="{{user.email}}" name="email" class="form-control {{#if errors.email}} is-invalid{{/if}}" id="email">
+      {{#if errors.email}}
+        <div class="invalid-feedback">
+          {{errors.email.message}}
+        </div>
+      {{/if}}
+    </div>
+    <div class="mb-3">
+      <label for="password" class="form-label">Password</label>
+      <input type="password" value="{{user.password}}" name="password" class="form-control {{#if errors.password}} is-invalid{{/if}}" id="password">
+      {{#if errors.password}}
+        <div class="invalid-feedback">
+          {{errors.password.message}}
+        </div>
+      {{/if}}
+    </div>
+    <button type="submit" class="btn btn-primary">Create</button>
+  </form>
+</div>
